# TrillbitSDK-aarch64

./: .gitignore  CMakeLists.txt  README.md
include/: trill.h
main/: CMakeLists.txt
main/decoder/: CMakeLists.txt  alsa.c  alsa.h  main.c  wave.c  wave.h
main/generator/: CMakeLists.txt  alsa.c  alsa.h  main.c  wave.c  wave.h
scripts/filters/: README.md  filter.py
scripts/license/: README.md  license_device_script.py
toolchains/: aarch64_gcc_linux.cmake
